--- a/1-EntradaSalida/EntradaSalida-3.html
+++ b/1-EntradaSalida/EntradaSalida-3.html
@@ -41,8 +41,9 @@
 	<form id="FormIngreso" class=" animated bounceInLeft" class=" animated bounceInLeft">
 		<h1>Ingrese Su Nombre</h1>
 		<input type="text"  placeholder="Ingrese su nombre" id="elNombre">
+		<input type="text"  placeholder="Ingrese su apellido" id="elApellido">
 		  
-			<a  class="MiBotonUTNnav" onclick="mostrar()" >Mostrar</a>
+			<a  class="MiBotonUTNnav" onclick="mostrar()" >"Mostrar"</a>
 			
 
 	</form>				
