--- a/1-EntradaSalida/EntradaSalida-4.html
+++ b/1-EntradaSalida/EntradaSalida-4.html
@@ -40,8 +40,9 @@
 	<form id="FormIngreso" class=" animated bounceInLeft" class=" animated bounceInLeft">
 		<h1>Ingrese Su Nombre</h1>
 			<input type="text" readonly placeholder="Su nombre" id="elNombre">
+			<input type="text" readonly placeholder="Su apellido" id="elApellido">
 			<a  class="MiBotonUTNnav" onclick="mostrar()" >Mostrar</a>
-			
+			<a  class="MiBotonUTNnav" onclick="alerta()" >Alerta</a>
 
 	</form>				
    
